2001-04-17  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (gnome_oaf_module_info): Removed; this is in libbonobo.
	(libgnome_module_requires): Require libbonobo.

	* libgnome-2.0.pc.in: Depend on libbonobo-2.

2001-04-17  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.c (gnome_desktop_item_drop_uri_list): Don't call
	gnome_uri_extract_filename(), just use the URI as-is.

2001-04-15  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (libgnome_loadinit): Don't initialize threads here;
	this has already been done by libgnomebase.

2001-04-15  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (gnome_program_get_gconf_client): Moved this function
	here; it was previously in gnome-program.c, but gnome-program.c is now
	in libgnomebase and thus cannot use gconf anymore.

	* libgnome-init.h: New public header file.
	(GNOME_PARAM_GCONF_CLIENT): Moved this #define here.
	(gnome_program_get_gconf_client): Provide external declaration.
	(gnome_oaf_module_info, gnome_gconf_module_info, gnome_vfs_module_info,
	libgnome_module_info): Moved external declarations here from libgnome.h.

	* libgnome.h: #include <libgnome/libgnome-init.h>.

2001-04-15  Martin Baulig  <baulig@suse.de>

	* libgnome-2.0.pc.in: Depend on libgnomebase-2.

2001-04-15  Martin Baulig  <baulig@suse.de>

	* gnome-program.[ch]: Removed; this is now in libgnomebase/libgnomebase.

	* gnome-defs.h, gnome-i18n.h: Removed; this is now in libgnomebase/libgnomebase.

	* gnome-i18nP.h: Moved all the external declarations from gnome-i18n.h here.

	* gnome-portability.h.in: Removed; this is now in libgnomebase/libgnomebase.

2001-04-14  Martin Baulig  <baulig@suse.de>

	* gnome-program.h (GNOME_PARAM_GCONF_CLIENT): New GnomeProgram property.
	(gnome_program_get_gconf_client): New convenience function to return the
	GnomeProgram's GNOME_PARAM_GCONF_CLIENT property.

	* gnome-program.c (gnome_program_get_property): Fixed a typo to make this
	actually work.
